--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "font-awesome": "^4.7.0",
     "less-loader": "^5.0.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
