--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less-loader": "^5.0.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.2.0",
     "vue-uuid": "^2.0.2",
     "vuex": "^3.6.2"
