--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "element-ui": "^2.15.6",
     "font-awesome": "^4.7.0",
     "less-loader": "^5.0.0",
+    "qs": "^6.10.2",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-baidu-map": "^0.21.22",
+    "vue-fontawesome-elementui-icon-picker": "^0.1.9",
     "vue-router": "^3.2.0",
     "vue-uuid": "^2.0.2",
     "vuex": "^3.6.2"
